--- a/portfolio/src/Components/App.css
+++ b/portfolio/src/Components/App.css
@@ -5,4 +5,9 @@
     padding: 0;
     font-family: 'Roboto Mono', monospace;
     font-weight: bolder;
+    scroll-behavior: smooth;
+}
+a{
+    text-decoration: none;
+    color: white;
 }
