--- a/portfolio/src/Components/home/home.css
+++ b/portfolio/src/Components/home/home.css
@@ -1,29 +1,10 @@
-/*CLASSES*/
 .home-component{
     background-color: #000000;
     width: 100%;
-    height: 100vh;
+    height: 80vh;
     color: white;
+    padding-top: 30vh;
 }
-
-/*CLASSES parte superior*/
-.menu{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 40px 30px 0 30px;
-    margin-bottom: 70px;
-}
-.menu-list{
-    list-style-type: none;
-    display: flex;
-}
-.menu-list li {
-    margin: 0 30px 0 0;
-}
-
-/*CLASSES sessão*/
 .apresentation{
     display: flex;
     align-items: center;
@@ -67,7 +48,6 @@
     letter-spacing: 4px;
     margin: 0 0 0 35px;
 }
-
 .image-box{
     width: 30%;
 }
