--- a/portfolio/src/Components/about/about.css
+++ b/portfolio/src/Components/about/about.css
@@ -12,6 +12,7 @@
     flex: 1;
     width: 100%;
     text-align: start;
+    margin: 0 0 -25vh 0;
 }
 .skills-images{
     flex: 1;
@@ -21,8 +22,33 @@
     width: 100%;
 }
 .skills-box{
-    flex: 2;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: flex-start;
 }
 .images-box{
     flex: 1;
+    display: flex;
+    align-items: center;
+    height: 100%;
+    justify-content: space-evenly;
+}
+.icon {
+    font-size: 50px;
+}
+.animation {
+    animation: rotate 5s linear infinite;
+}
+
+
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(359deg);
+    }
 }
