--- a/portfolio/src/Components/home/home.css
+++ b/portfolio/src/Components/home/home.css
@@ -36,24 +36,36 @@
 .apresentation-tittle{
     flex: 5;
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: flex-start;
     padding: 0 20px 0 0;
 }
+.tittles-box{
+    flex: 4;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    
+}
 .tittle{
     font-size: 60px;
-    margin: 0 0 0 -40px;
+    margin: 0 0 0 -20px;
 }
 .subtittle{
     letter-spacing: 4px;
-    margin: 0 0 0 35px;
+    margin: 0 0 0 30px;
 }
 .image-box{
-    width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 4;
+    width: 100%;
 }
 .image{
-    width: 120%;
-    margin: 30px 0 0 -20px;
+    width: 100%;
+    margin: 0px 0 0 0px;
 }
 
 
