--- a/portfolio/src/Components/about/about.css
+++ b/portfolio/src/Components/about/about.css
@@ -1,6 +1,5 @@
 .about-component{
     height: 80vh;
-    border-top: 2px solid white;
     color: white;
     background-color: #000000;
     display: flex;
@@ -37,6 +36,7 @@
 }
 .icon {
     font-size: 50px;
+    z-index: 0;
 }
 .animation {
     animation: rotate 5s linear infinite;
