--- a/portfolio/src/Components/home/home.css
+++ b/portfolio/src/Components/home/home.css
@@ -56,6 +56,12 @@
     letter-spacing: 4px;
     margin: 0 0 0 30px;
 }
+.subtittle::after {
+    content: "|";
+    margin-left: 5px;
+    opacity: 1;
+    animation: writeeffect .7s infinite;
+}
 .image-box{
     display: flex;
     align-items: center;
@@ -68,4 +74,13 @@
     margin: 0px 0 0 0px;
 }
 
+/*Animation*/
 
+@keyframes writeeffect {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
