solução texto dinamico

--- a/portfolio/src/Components/sectionprojetos/sectionprojetos.css
+++ b/portfolio/src/Components/sectionprojetos/sectionprojetos.css
@@ -44,7 +44,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    color: white;
+    color: #000000;
+    
 }
 .tittleprojects{
     display: flex;
