--- a/portfolio/src/Components/sectionprojetos/sectionprojetos.css
+++ b/portfolio/src/Components/sectionprojetos/sectionprojetos.css
@@ -28,15 +28,7 @@
     background-repeat: no-repeat;
     transition: all ease-in-out .3s;
     margin: 30px 0 0 0;
-}
-
-.project:hover {
-    z-index: 1;
-    cursor: pointer;
-    background-color: white;
-    background-image: none;
-    transition: all ease-in-out .3s;
-    background-image: none;
+    transition: .3s;
 }
 
 .projectbox-data{
@@ -46,8 +38,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    color: #000000;
-    
+    color: #000000;   
+    display: none;
+    transition: .4s;
 }
 .tittleprojects{
     display: flex;
@@ -55,14 +48,13 @@
     align-items: flex-start;
     justify-content: center;
 }
-
 .projectlink{
     color: black;
 }
 .projectlink:hover{
     text-decoration: underline;
 }
-.some {
-    display: none;
-}
+
+
+
 
