--- a/portfolio/src/Components/sectionprojetos/sectionprojetos.css
+++ b/portfolio/src/Components/sectionprojetos/sectionprojetos.css
@@ -40,13 +40,14 @@
     justify-content: space-evenly;
     color: #000000;   
     display: none;
-    transition: .4s;
+    transition: .3s;
 }
 .tittleprojects{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
+    background-color: none;
 }
 .projectlink{
     color: black;
