--- a/portfolio/src/Components/App.css
+++ b/portfolio/src/Components/App.css
@@ -6,6 +6,7 @@
     font-family: 'Roboto Mono', monospace;
     font-weight: bolder;
     scroll-behavior: smooth;
+    transition: all ease-in-out .3s;
 }
 a{
     text-decoration: none;
