--- a/portfolio/src/Components/about/about.css
+++ b/portfolio/src/Components/about/about.css
@@ -5,7 +5,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 25vh 20vh 0 20vh;
+    padding: 25vh 10vh 0 10vh;
+    
 }
 .sobre{
     flex: 1;
@@ -21,7 +22,7 @@
     width: 100%;
 }
 .skills-box{
-    flex: 1;
+    flex: 2;
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -52,3 +53,5 @@
         transform: rotate(359deg);
     }
 }
+
+/*Media queries*/
