--- a/portfolio/src/Components/menu/menu.css
+++ b/portfolio/src/Components/menu/menu.css
@@ -1,3 +1,4 @@
+
 .menu-component{
     display: flex;
     flex-direction: row;
@@ -13,6 +14,7 @@
 }
 .name{
     margin: 0 0 0 50px;
+    
 }
 .menu-list{
     list-style-type: none;
@@ -29,4 +31,19 @@
 .link:hover{
     opacity: 1;
     transition: all ease-in-out .3s;
+}
+
+
+@media screen and (max-width: 700px) {
+    .menu-component{
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        
+    }
+    .menu-list {
+        display: none;
+    }
+  
+    
 }
