--- a/portfolio/src/Components/home/home.css
+++ b/portfolio/src/Components/home/home.css
@@ -134,3 +134,12 @@
         width: 50vh;
     }
 }
+@media (max-width: 460px){
+    .tittle {
+        font-size: 37px;
+        margin: 0 0 0 0;
+    }
+    .subtittle {
+        font-size: 10px;
+    }
+}
