--- a/portfolio/src/Components/menu/menu.css
+++ b/portfolio/src/Components/menu/menu.css
@@ -34,16 +34,20 @@
 }
 
 
+
 @media screen and (max-width: 700px) {
-    .menu-component{
-        justify-content: center;
-        align-items: center;
-        display: flex;
-        
-    }
-    .menu-list {
-        display: none;
-    }
-  
-    
+   .menu-list{
+     flex-direction: column;
+     align-items: flex-start;
+     justify-content: flex-start;
+     position: fixed;
+     top: 0;
+     right: 0;
+     margin: 0 0 0 0;
+     padding: 5vh 0 0 0;
+     height: 100vh;
+   }
+   .menu-list li {
+    margin: 4vh 3vh 0 0;
+   }
 }
