--- a/portfolio/src/Components/menu/menu.css
+++ b/portfolio/src/Components/menu/menu.css
@@ -1,5 +1,4 @@
-
-.menu-component{
+.menu-component {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -12,42 +11,71 @@
     top: 0;
     z-index: 1;
 }
-.name{
+
+.name {
     margin: 0 0 0 50px;
-    
+
 }
-.menu-list{
+
+.menu_hamb {
+    display: none;
+
+}
+
+.menu-list {
     list-style-type: none;
     display: flex;
     margin: 0 50px 0 0;
 }
+
 .menu-list li {
     margin: 0 30px 0 0;
 }
-.link{
+
+.link {
     opacity: 0.5;
     transition: all ease-in-out .3s;
 }
-.link:hover{
+
+.link:hover {
     opacity: 1;
     transition: all ease-in-out .3s;
 }
 
 
-
 @media screen and (max-width: 700px) {
-   .menu-list{
-     flex-direction: column;
-     align-items: flex-start;
-     justify-content: flex-start;
-     position: fixed;
-     top: 0;
-     right: 0;
-     margin: 0 0 0 0;
-     padding: 5vh 0 0 0;
-     height: 100vh;
-   }
-   .menu-list li {
-    margin: 4vh 3vh 0 0;
-   }
+    .menu-component {
+        justify-content:center ;
+    }
+    .menu-list {
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        position: fixed;
+        top: 0;
+        right: 0;
+        margin: 0 0 0 0;
+        padding: 3vh 3vh 0 3vh;
+        height: 100vh;
+        background-color: #000000;
+        
+    }
+    .menu-list-open{
+        border: 1px solid white;
+    }
+
+    .menu_hamb {
+        background-color: #000000;
+        color: white;
+        font-size: 25px;
+        border: 1px solid white;
+        padding: 6px;
+        border-radius: 50%;
+        margin: 0 auto 0 auto;
+        display: flex;
+        margin: 3vh 0 3vh 0;
+    }
+    .menu-list li {
+        margin: 4vh 0vh 0 0;
+    }
 }
