--- a/portfolio/src/Components/menu/menu.css
+++ b/portfolio/src/Components/menu/menu.css
@@ -57,11 +57,13 @@
         margin: 0 0 0 0;
         padding: 3vh 3vh 0 3vh;
         height: 100vh;
-        background-color: #000000;
-        
     }
     .menu-list-open{
         border: 1px solid white;
+        background-color: #000000;
+    }
+    .name {
+        margin: 0 ;
     }
 
     .menu_hamb {
