--- a/portfolio/src/Components/sectionprojetos/sectionprojetos.css
+++ b/portfolio/src/Components/sectionprojetos/sectionprojetos.css
@@ -1,8 +1,8 @@
 .sectionprojects_comp {
     background-color: #000000;
-    height: 100vh;
+    height: max-content;
     color: white;
-    padding-top: 25vh;
+    padding: 25vh 0 10vh 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,7 +24,7 @@
     width: 30%;
     height: 30vh;
     border: 1px solid white;
-    background-size: cover;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     transition: all ease-in-out .3s;
     margin: 30px 0 0 0;
@@ -57,4 +57,45 @@
 
 .projectlink:hover {
     text-decoration: underline;
+}
+
+@media (max-width: 1000px){
+    .project {
+        width: 40%;
+        height: 30vh;
+     
+    }
+}
+@media (max-width: 800px){
+    .project {
+        width: 50%;
+        height: 30vh;
+        margin: 30px 0 0 0;
+        
+    }
+}
+@media (max-width: 650px){
+    .project {
+        width: 70%;
+        height: 40vh;
+        margin: 30px 0 0 0;
+        
+    }
+}
+@media (max-width: 550px){
+    .project {
+        width: 70%;
+        height: 30vh;
+    }
+}
+@media (max-width: 420px){
+    .project {
+        width: 85%;
+        height: 30vh;
+        margin: 40px 0 0 0;
+        
+    }
+    .tittleprojects{
+        font-size: 13px;
+    }
 }
