--- a/portfolio/src/Components/App.css
+++ b/portfolio/src/Components/App.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
 
+
+body {
+    background-color: #000000;
+}
 * {
     margin: 0;
     padding: 0;
