--- a/portfolio/src/Components/Contact-component/contact.css
+++ b/portfolio/src/Components/Contact-component/contact.css
@@ -1,16 +1,23 @@
 .contact-comp {
     background-color: #000000;
-    width: 100%;
+    width: 80%;
     height: 80vh;
     color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: 0 auto 0 auto ;
+    padding: 0 5vh 0 5vh;
 }
 .contact-box{
     width: max-content;
     margin: 30px 0 0 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    
+    
 }
 .tittle-footer{
     text-align: center;
@@ -35,13 +42,17 @@
 }
 
 @media (max-width: 385px){
+    .contact-comp {
+        width: 70%;
+        
+    }
     .tittle-footer{
         width: 50vh;
-        font-size: 25px;
+        font-size: 23px;
         line-height: 40px;
     }
     .icons-footer {
-        font-size: 28px;
+        font-size: 24px;
         margin: 0 15px 0 0;
         opacity: .6;
     }
