--- a/portfolio/src/Components/Contact-component/contact.css
+++ b/portfolio/src/Components/Contact-component/contact.css
@@ -1,6 +1,6 @@
 .contact-comp {
     background-color: #000000;
-    width: 80%;
+    width: 100%;
     height: 80vh;
     color: white;
     display: flex;
@@ -8,14 +8,16 @@
     align-items: center;
     justify-content: center;
     margin: 0 auto 0 auto ;
-    padding: 0 5vh 0 5vh;
+   
 }
 .contact-box{
+    width: 100%;
+    margin: auto;
     width: max-content;
-    margin: 30px 0 0 0;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+    
     
     
 }
