--- a/portfolio/src/Components/Contact-component/contact.css
+++ b/portfolio/src/Components/Contact-component/contact.css
@@ -1,13 +1,14 @@
 .contact-comp {
     background-color: #000000;
     width: 100%;
-    height: 80vh;
+    height: max-content;
+    min-height: 20vh;
     color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 0 auto 0 auto ;
+    margin: 10vh auto 10vh auto ;
    
 }
 .contact-box{
@@ -17,8 +18,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    
-    
     
 }
 .tittle-footer{
