--- a/portfolio/src/Components/home/home.css
+++ b/portfolio/src/Components/home/home.css
@@ -54,14 +54,10 @@
     
 }
 .tittle{
-    font-size: 60px;
+    font-size: 55px;
     margin: 0 0 0 -20px;
 }
-.subtittle{
-    letter-spacing: 4px;
-    margin: 0 0 0 30px;
-}
-.subtittle::after {
+.tittle::after {
     content: "|";
     margin-left: 5px;
     opacity: 1;
@@ -97,12 +93,10 @@
         flex:2;
     }
     .tittle {
-        font-size: 50px;
+        font-size: 45px;
         margin: 0 0 0 0;
     }
-    .subtittle {
-        font-size: 19px;
-    }
+
     .image-box{
         flex:1;
     }
@@ -138,8 +132,5 @@
     .tittle {
         font-size: 37px;
         margin: 0 0 0 0;
-    }
-    .subtittle {
-        font-size: 10px;
     }
 }
